# reproserver

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile  README.md  README.rst  Tiltfile  aws_policy.json  browsertrix.dockerfile  config.dist.py  config.dist.yml  deployment.dot  docker-compose.dev.yml  docker-compose.yml  dodo.py  doit.cfg  env.dist  k8s-ingress.yml  k8s-minio.yml  k8s-monitor.yml  k8s-sa.yml  k8s-secrets.yml  k8s-services.yml  k8s-volumes-gcp.yml  k8s-volumes-minikube.yml  k8s-volumes.yml  k8s.minio.yml  k8s.tpl.yml  k8s.yml  k8s.yml.tpl  kind.yml  pyproject.toml
.github/workflows/: test.yml
builder/: .tarignore  Dockerfile  run.py
builder/builder/: __main__.py  main.py
common/: database.py  utils.py
common/common/: __init__.py  database.py  objectstore.py  shortid.py  tasks.py  utils.py
init/: Dockerfile  init.py  requirements.txt
k8s/: ingress-nginx.yml  ingress.yml  minikube.values.yml  minio.yml  monitor.yml  nginx-ingress.k8s-1.22.yml  postgres.yml  registry.yml  reproserver.yml  sa.yml  secrets.yml  volumes.yml
k8s/helm/: Chart.yaml  values.yaml
k8s/helm/charts/minio/: Chart.yaml  values.yaml
k8s/helm/charts/postgres/: Chart.yaml  values.yaml
k8s/helm/charts/registry/: Chart.yaml  values.yaml
k8s/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  metrics-service.yaml  proxy-deployment.yaml  proxy-ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  watcher-deployment.yaml
k8s/helm/templates/tests/: test-connection.yaml
reproserver/: build.py  database.py  extensions.py  main.py  objectstore.py  providers.py  proxy.py  rpz_metadata.py  run.py  shortid.py  tasks.py  utils.py
reproserver/repositories/: __init__.py  base.py  figshare.py  mendeley.py  osf.py  zenodo.py
reproserver/run/: base.py  connector.py  docker.py  gcp-startup-script.sh  gcp.py  k8s.py
reproserver/static/css/: bootstrap.min.css  bootstrap4-nyu.min.css  custom.css
reproserver/static/replay/: sw.js  ui.js
reproserver/templates/: about.html  base.html  data.html  index.html  provider_notfound.html  repository_error.html  repository_notfound.html  results.html  setup.html  setup_badfile.html  setup_notfound.html
reproserver/templates/webcapture/: crawl_results.html  dashboard.html  index.html  notfound.html  record.html  start_crawl.html  upload_wacz.html  upload_wacz_bad.html
reproserver/web/: __init__.py  api.py  base.py  views.py  webcapture.py
reproserver/web/static/css/: bootstrap.min.css.map  custom.css
reproserver/web/templates/: about.html  base.html  data.html  index.html  record.html  repository_error.html  repository_notfound.html  results.html  results_notfound.html  setup.html  setup_badfile.html  setup_notfound.html
runner/: Dockerfile  requirements.txt  run.py
runner/runner/: __main__.py  main.py
scripts/: _lib.sh  delete_experiments.sh  delete_runs.sh  docker_build_push.sh  get_assets.sh  migrate_add_size.py  minikube-load-images.sh  psql.sh  reprocess_experiments.py  reset_builds.sh
tests/: __main__.py  ci.kind.yml  test_repositories.py
tests/integ/: test_integ.py
tests/unit/: test_repositories.py
web/: Dockerfile  entrypoint.sh  requirements.txt  run.py
web/web/: __main__.py  main.py  providers.py  wsgi.py
web/web/templates/: about.html  base.html  data.html  index.html  results.html  results_notfound.html  setup.html  setup_notfound.html  unpack.html
(+23 files in other folders)
