[tool.poetry]
name = "reproserver"
version = "0.8"
description = "A web application reproducing ReproZip packages in the cloud. Runs on Kubernetes"

license = "BSD-3-Clause"

authors = [
    "Remi Rampin <r@remirampin.com>"
]

readme = "README.rst"

repository = "https://github.com/VIDA-NYU/reproserver"
homepage = "https://server.reprozip.org/"

keywords = ["reprozip", "reprounzip", "docker", "kubernetes", "reproducibility", "reproducible-research", "linux", "science", "nyu"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Archiving",
    "Topic :: System :: Emulators",
]

include = [
    # LICENSE.txt README.rst
    "reproserver/static/favicon.ico",
    "reproserver/static/css/*.css",
    "reproserver/static/js/*.js",
    "reproserver/static/fonts/*",
    "reproserver/templates/*.html",
]

[tool.poetry.dependencies]
python = "^3.6"
tornado = ">=5.0"
sqlalchemy = "^1.4"
jinja2 = "*"
boto3 = "^1"
google-api-python-client = "*"
google-auth = "*"
google-auth-httplib2 = "*"
psycopg2 = "^2.8"
kubernetes_asyncio = "*"
PyYAML = "*"
prometheus_client = "*"

reprounzip = { path = "reprozip/reprounzip", develop=true }
reprounzip-docker = { path = "reprozip/reprounzip-docker", develop=true }

[tool.poetry.dev-dependencies]
coverage = "*"
flake8 = "*"
readme_renderer = "*"
requests = "*"

[tool.poetry.scripts]
reproserver = "reproserver.main:main"
reproserver-docker-proxy = "reproserver.proxy:docker_proxy"
reproserver-k8s-proxy = "reproserver.proxy:k8s_proxy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
